# p-drf-exam

./: .env  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
apps/car/: models.py  serializers.py  urls.py  views.py
apps/car/migrations/: 0001_initial.py  0003_alter_carmodelmodel_model_and_more.py  0005_carpostermodel_user.py
apps/user/: models.py  serializers.py  urls.py  views.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/car/: filter.py  models.py  serializers.py  urls.py  views.py
backend/apps/exchange_rates/: apps.py  models.py
backend/apps/statistic/: models.py  services.py
backend/apps/support/: filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/user/: filter.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: __init__.py  celery_conf.py  rest_conf.py
backend/core/: pagination.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/handlers/: error_handler.py
backend/core/services/: banned_words_service.py  (+4 more)
backend/templates/: for_car_poster_edit.html  recovery.html  register.html  support_request.html  test_email.html
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  index.js  router.js  router.tsx
postman/: python_exam.postman_collection.json
(+259 files in other folders)
